name:                coco
version:             0.1.0.0
-- synopsis:
description:         Simple Scheme interpreter
homepage:            https://github.com/mariamrf/coco#readme
license:             MIT
license-file:        LICENSE
author:              Mariam Maarouf
maintainer:          mrf.mariam@gmail.com
copyright:           2017 Mariam Maarouf
category:            Interpreter
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       ValueLib
                     , Eval
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
  default-language:    Haskell2010

executable coco-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , coco
                     , parsec
  default-language:    Haskell2010

test-suite coco-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , coco
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mariamrf/coco
